tests/ui/macros/typo-in-norepeat-expr.stderr
error: expected expression, found `$`
  --> $DIR/typo-in-norepeat-expr.rs:4:10
   |
LL |         [$arg]
   |          ^^^^ expected expression
...
LL |     let _ = m![begin x end];
   |             --------------- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)
help: there is a macro metavariable with similar name
   |
LL -         [$arg]
LL +         [$ard]
   |

error: aborting due to 1 previous error

